--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
 
    <div class="player">
-     <video class="player__video viewer" src="https://shorturl.at/qWF2W"></video>
+     <video class="player__video viewer" src="https://shorturl.at/eZydc"></video>
 
      <div class="player__controls">
        <div class="progress">
